--- a/package/hong/luci-app-clash/root/usr/share/clash/dns.yaml
+++ b/package/hong/luci-app-clash/root/usr/share/clash/dns.yaml
@@ -1,20 +1,19 @@
 
-
 experimental:
   ignore-resolve-fail: true
-
 #authentication:
 # - "user1:pass1"
-
 # hosts:
 #   '*.clash.dev': 127.0.0.1
 #   'alpha.clash.dev': '::1'
- 
 dns:
  enable: true
  listen: 0.0.0.0:5300
  enhanced-mode: fake-ip
  fake-ip-range: 198.18.0.0/16
+ # fake-ip-filter: # fake ip white domain list
+ #   - *.lan
+ #   - localhost.ptlogin2.qq.com
  nameserver: 
   - 119.29.29.29 
   - 114.114.114.114    
