--- a/package/hong/luci-app-dockerman/Makefile
+++ b/package/hong/luci-app-dockerman/Makefile
@@ -1,43 +1,16 @@
+#
+# This is free software, licensed under the Apache License, Version 2.0 .
+#
+
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=luci-app-dockerman
-PKG_VERSION:=v0.1.7
-PKG_RELEASE:=beta
+LUCI_TITLE:=LuCI support for the Docker
+LUCI_DEPENDS:=+docker-ce +luci-lib-json
+LUCI_PKGARCH:=all
+
 PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-app-dockerman>
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
-PKG_LICENSE:=Apache-2.0
 
-include $(INCLUDE_DIR)/package.mk
+include ../../luci.mk
+# include $(TOPDIR)/feeds/luci/luci.mk
 
-define Package/$(PKG_NAME)
-	SECTION:=luci
-	CATEGORY:=LuCI
-	SUBMENU:=3. Applications
-	TITLE:=Docker Manager interface for LuCI
-	PKGARCH:=all
-	DEPENDS:=+luci-lib-docker
-endef
-
-define Package/$(PKG_NAME)/description
-	Docker Manager interface for LuCI
-endef
-
-define Build/Prepare
-endef
-
-define Build/Compile
-endef
-
-define Package/$(PKG_NAME)/postinst
-#!/bin/sh
-rm -fr /tmp/luci-indexcache /tmp/luci-modulecache
-endef
-
-define Package/$(PKG_NAME)/install
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci
-	cp -pR ./luasrc/* $(1)/usr/lib/lua/luci
-	$(INSTALL_DIR) $(1)/
-	cp -pR ./root/* $(1)/
-endef
-
-$(eval $(call BuildPackage,$(PKG_NAME)))
+# call BuildPackage - OpenWrt buildroot signature
