--- a/package/hong/luci-app-dockerman/Makefile
+++ b/package/hong/luci-app-dockerman/Makefile
@@ -12,7 +12,6 @@ PKG_RELEASE:=beta
 
 PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-app-dockerman>
 
-include ../../luci.mk
-# include $(TOPDIR)/feeds/luci/luci.mk
+include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
