--- a/package/lean/qBittorrent/Makefile
+++ b/package/lean/qBittorrent/Makefile
@@ -1,11 +1,12 @@
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=qbittorrent
+PKG_NAME:=qBittorrent
 PKG_VERSION:=4.2.1
-PKG_RELEASE=5
+PKG_RELEASE=1
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/qbittorrent/qbittorrent.git
+PKG_SOURCE_URL:=https://github.com/qBittorrent/qBittorrent.git
+PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=118af03534e5ded6d3c8323b5dbeeff57b177193
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 
