--- a/package/hong/luci-app-diskman/Makefile
+++ b/package/hong/luci-app-diskman/Makefile
@@ -36,6 +36,8 @@ endef
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci
 	cp -pR ./luasrc/* $(1)/usr/lib/lua/luci
+	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
+	po2lmo ./po/zh-cn/diskman.po $(1)/usr/lib/lua/luci/i18n/diskman.lmo
 	# $(INSTALL_DIR) $(1)/
 	# cp -pR ./root/* $(1)/
 endef
