--- a/package/hong/luci-app-diskman/Makefile
+++ b/package/hong/luci-app-diskman/Makefile
@@ -9,37 +9,4 @@ PKG_LICENSE:=Apache-2.0
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/$(PKG_NAME)
-	SECTION:=luci
-	CATEGORY:=LuCI
-	SUBMENU:=3. Applications
-	TITLE:=Disk Manager interface for LuCI
-	PKGARCH:=all
-	DEPENDS:=+e2fsprogs +parted +smartmontools +blkid +btrfs-progs
-endef
-
-define Package/$(PKG_NAME)/description
-	Disk Manager interface for LuCI
-endef
-
-define Build/Prepare
-endef
-
-define Build/Compile
-endef
-
-define Package/$(PKG_NAME)/postinst
-#!/bin/sh
-rm -fr /tmp/luci-indexcache /tmp/luci-modulecache
-endef
-
-define Package/$(PKG_NAME)/install
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci
-	cp -pR ./luasrc/* $(1)/usr/lib/lua/luci
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
-	po2lmo ./po/zh-cn/diskman.po $(1)/usr/lib/lua/luci/i18n/diskman.lmo
-	# $(INSTALL_DIR) $(1)/
-	# cp -pR ./root/* $(1)/
-endef
-
-$(eval $(call BuildPackage,$(PKG_NAME)))
+# call BuildPackage - OpenWrt buildroot signature
