--- a/package/hong/luci-app-diskman/Makefile
+++ b/package/hong/luci-app-diskman/Makefile
@@ -1,12 +1,13 @@
+
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-diskman
+LUCI_DEPENDS:=+e2fsprogs +parted +smartmontools +blkid +btrfs-progs
 PKG_VERSION:=v0.0.2
 PKG_RELEASE:=beta
 PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-app-diskman>
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
-PKG_LICENSE:=Apache-2.0
 
-include $(INCLUDE_DIR)/package.mk
+
+include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
