--- a/package/hong/luci-lib-docker/Makefile
+++ b/package/hong/luci-lib-docker/Makefile
@@ -1,9 +1,14 @@
+#
+# Copyright (C) 2019 lisaac <lisaac.cn@gmail.com>
+#
+# This is free software, licensed under the Apache License, Version 2.0 .
+#
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=luci-app-dockerman
-PKG_VERSION:=v0.1.7
+PKG_NAME:=luci-lib-docker
+PKG_VERSION:=v0.1.1
 PKG_RELEASE:=beta
-PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-app-dockerman>
+PKG_MAINTAINER:=lisaac <https://github.com/lisaac/luci-lib-docker>
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
 PKG_LICENSE:=Apache-2.0
 
@@ -12,14 +17,14 @@ include $(INCLUDE_DIR)/package.mk
 define Package/$(PKG_NAME)
 	SECTION:=luci
 	CATEGORY:=LuCI
-	SUBMENU:=3. Applications
-	TITLE:=Docker Manager interface for LuCI
+	SUBMENU:=6. Libraries
+	TITLE:=Docker Engine API for LuCI
 	PKGARCH:=all
-	DEPENDS:=+luci-lib-docker
+	DEPENDS:=+luci-lib-json
 endef
 
 define Package/$(PKG_NAME)/description
-	Docker Manager interface for LuCI
+	Docker Engine API for LuCI
 endef
 
 define Build/Prepare
@@ -36,8 +41,6 @@ endef
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci
 	cp -pR ./luasrc/* $(1)/usr/lib/lua/luci
-	$(INSTALL_DIR) $(1)/
-	cp -pR ./root/* $(1)/
 endef
 
 $(eval $(call BuildPackage,$(PKG_NAME)))
