--- a/package/hong/lienol/luci-app-passwall/Makefile
+++ b/package/hong/lienol/luci-app-passwall/Makefile
@@ -6,11 +6,10 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-passwall
-PKG_VERSION:=3.0
-PKG_RELEASE:=2
+PKG_VERSION:=3.2
+PKG_RELEASE:=7-20200106
 
 PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
-PO2LMO:=./po2lmo
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -124,8 +123,7 @@ define Package/$(PKG_NAME)/install
 	cp -pR ./luasrc/* $(1)/usr/lib/lua/luci/
 	
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
-	chmod 755 $(PO2LMO)
-	$(PO2LMO) ./po/zh-cn/passwall.po $(1)/usr/lib/lua/luci/i18n/passwall.zh-cn.lmo
+	po2lmo ./po/zh-cn/passwall.po $(1)/usr/lib/lua/luci/i18n/passwall.zh-cn.lmo
 endef
 
 define Package/$(PKG_NAME)/postinst
