--- a/package/hong/parted/Makefile
+++ b/package/hong/parted/Makefile
@@ -1,30 +1,27 @@
 #
-# Copyright (C) 2007 OpenWrt.org
+# Copyright (C) 2019 OpenWrt.org
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
-
+#
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=parted
 PKG_VERSION:=3.3
 PKG_RELEASE:=1
 
-PKG_INSTALL:=1
-
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-PKG_SOURCE_URL:=@GNU/$(PKG_NAME)
+PKG_BUILD_DIR:=$(BUILD_DIR)/parted-$(PKG_VERSION)
+PKG_SOURCE:=parted-$(PKG_VERSION).tar.xz
+PKG_SOURCE_URL:=@GNU/parted
 PKG_MD5SUM:=090655d05f3c471aa8e15a27536889ec
 
 include $(INCLUDE_DIR)/package.mk
-
 define Package/parted
   SECTION:=utils
   CATEGORY:=Utilities
-  SUBMENU:=Disc
   TITLE:=parted Partition editor
   URL:=http://www.gnu.org/software/parted/index.shtml
-  DEPENDS:=@!LINUX_2_4 +libblkid +libuuid
+  DEPENDS:= +libuuid +libreadline +libncurses +libblkid
 endef
 
 define Package/parted/description
@@ -40,12 +37,13 @@ define Build/Configure
 	)
 endef
 
-define Package/parted/install	
+define Package/parted/install
 	$(INSTALL_DIR) $(1)/usr/sbin
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP)          $(PKG_INSTALL_DIR)/usr/lib/*.so*      $(1)/usr/lib
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/sbin/parted    $(1)/usr/sbin	
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/sbin/partprobe $(1)/usr/sbin
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/libparted/.libs/*.so* $(1)/usr/lib/
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/libparted/fs/.libs/*.so* $(1)/usr/lib/
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/parted/.libs/parted $(1)/usr/sbin/
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/partprobe/.libs/partprobe $(1)/usr/sbin/
 endef
 
 $(eval $(call BuildPackage,parted))
