--- a/package/hong/lienol/luci-app-passwall/Makefile
+++ b/package/hong/lienol/luci-app-passwall/Makefile
@@ -10,6 +10,7 @@ PKG_VERSION:=3.2
 PKG_RELEASE:=13-20200108
 
 PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+PO2LMO:=./po2lmo
 
 include $(INCLUDE_DIR)/package.mk
 
